--- a/www/src/main/resources/static/css/homeStyle.css
+++ b/www/src/main/resources/static/css/homeStyle.css
@@ -1,8 +1,15 @@
 @charset "UTF-8";
 
-.contents img {
+.contents .mapimg {
    display: block;
    width: 620px;
+   height: 700px;
+}
+
+.contents .regionimg {
+   width: 900px;
+   height: 700px;
+   filter: blur(5px);
 }
 
 .contents a {
@@ -10,26 +17,26 @@
    position: absolute;
    transform: translate(-50%, -50%);
    transition: all 0.3s ease;
-   color: #4BB958;
+   color: #2A3854;
    font-size: 18px;
    font-weight: bold;
    font-family: '';
-   /*text-shadow: 
-     -1px -1px 0 #2A3854,  
-    1px -1px 0 #2A3854,
-    -1px  1px 0 #2A3854,
-    1px  1px 0 #2A3854;*/
+   text-shadow: 
+     -0.5px -0.5px 0 #4BB958,  
+    0.5px -0.5px 0 #4BB958,
+    -0.5px  0.5px 0 #4BB958,
+    0.5px  0.5px 0 #4BB958;
 }
 
 .contents a:hover {
    transform: translate(-50%, -50%) scale(1.6);
-   color: white;
+   color: #2A3854;
    font-weight: bold;
    text-shadow: 
-     -1px -1px 0 #2A3854,  
-    1px -1px 0 #2A3854,
-    -1px  1px 0 #2A3854,
-    1px  1px 0 #2A3854;
+     -0.5px -0.5px 0 #4BB958,  
+    0.5px -0.5px 0 #4BB958,
+    -0.5px  0.5px 0 #4BB958,
+    0.5px  0.5px 0 #4BB958;
 }
 
 .sidebar-left {
@@ -196,13 +203,13 @@
   transform: translateX(-50%);
   font-size: 1em;
   white-space: nowrap;
-  color: white;
+   color: #2A3854;
    font-weight: bold;
    text-shadow: 
-     -1px -1px 0 #2A3854,  
-    1px -1px 0 #2A3854,
-    -1px  1px 0 #2A3854,
-    1px  1px 0 #2A3854;
+     -0.5px -0.5px 0 #4BB958,  
+    0.5px -0.5px 0 #4BB958,
+    -0.5px  0.5px 0 #4BB958,
+    0.5px  0.5px 0 #4BB958;
 }
 
 .date-picker-container {
@@ -229,3 +236,84 @@
    background-color: #f4f4f4; /* 배경색 설정 */
    border-radius: 5px; /* 모서리 둥글게 설정 */
 }
+
+
+
+  /* 제목 스타일 */
+  .title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  /* 슬라이드 컨테이너 */
+  .slider-container {
+    position: relative;
+    width: 100%;
+    height: 450px;
+    overflow: hidden;
+  }
+
+  /* 각 슬라이드 이미지 */
+  .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    animation: slideUp 16s infinite;
+  }
+  
+    /* 이미지 애니메이션 */
+ @keyframes slideUp {
+    0% { transform: translateY(100%); opacity: 0; }
+    6.25% { transform: translateY(0); opacity: 1; }
+    25% { transform: translateY(0); opacity: 1; }
+    31.25% { transform: translateY(-100%); opacity: 0; }
+    100% { transform: translateY(-100%); opacity: 0; }
+  }
+
+  /* 각 이미지에 다른 타이밍으로 애니메이션 시작 */
+  .slide:nth-child(1) { animation-delay: 0s; }
+  .slide:nth-child(2) { animation-delay: 4s; }
+  .slide:nth-child(3) { animation-delay: 8s; }
+  .slide:nth-child(4) { animation-delay: 12s; }
+
+  /* 버튼 스타일 */
+  .checkbox-button {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: #2A3854;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 30px;
+    transition: background-color 0.3s;
+    margin: 5px 10px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  /* 체크박스가 체크되었을 때 버튼 스타일 */
+  .checked {
+    background-color: #E27D24;
+  }
+  
+   /* 제출 버튼 스타일 */
+  .submit-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-size: 16px;
+    position: relative;
+    float: right; /* 우측 정렬 */
+    margin-top: 20px;
+    margin-right: 10px; /* 우측 여백 추가 */
+  }
+  
