--- a/www/src/main/resources/static/css/likeStyle.css
+++ b/www/src/main/resources/static/css/likeStyle.css
@@ -224,8 +224,60 @@ button:hover {
     opacity: 0;
     display: none;
   }
-  
-  
-  
-  
 }
+
+
+
+  .wrap {
+    position: relative;
+    width: 250px;
+    border-radius: 10px;
+    overflow: hidden;
+    background: white; /* 배경색 추가 */
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+    font-family: 'Arial', sans-serif;
+    border: 1px solid #ccc; /* 경계선 추가 */
+  }
+  
+    .info {
+    padding: 20px;
+  }
+  
+    .title {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+   .close {
+    background: url("https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png") no-repeat;
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  
+    .desc {
+    flex: 1;
+  }
+  
+  .desc .ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-bottom: 5px;
+    font-size: 12px;
+  }
+  
+  .desc .jibun {
+    font-size: 11px;
+    color: #888;
+    margin-bottom: 5px;
+  }
+  
+  .desc .link {
+    color: #0096ff;
+    text-decoration: none;
+  }
