--- a/www/src/main/resources/static/css/mainStyle.css
+++ b/www/src/main/resources/static/css/mainStyle.css
@@ -4,11 +4,6 @@
    width: 150px;
 }
 
-.mapimg {
-   height: 700px;
-   width: 900px;
-}
-
 .table-container {
   max-height: 400px;
   overflow-y: scroll;
@@ -156,6 +151,15 @@ input[id="menuicon"]:checked ~ .container .sidebar {
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+th, td {
+	border: 1px solid black;
+	padding: 5px 10px;
 }
 
 footer {
