--- a/www/src/main/resources/templates/gyeongbuk.html
+++ b/www/src/main/resources/templates/gyeongbuk.html
@@ -34,7 +34,7 @@
 	<div class="container">
 		<div class="contents">
 			<span class="area_desc">
-				<img class="mapimg" th:src="@{/image/gyeongbuk.png}">
+				<img class="regionimg" th:src="@{/image/gyeongbuk1.png}">
 				
 				<form id="locationForm" method="POST" onsubmit="return validateForm()">
 				
