길찾기, 비번확인

--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -71,6 +71,8 @@
         var selectedCity = this.value;
         window.location.href = '/?city=' + encodeURIComponent(selectedCity);
     });
+    
+    
 </script>
     </span>
   </div>
@@ -113,7 +115,7 @@
         <a href="/member/customer">customer</a><br>
         <a href="/place/travelplan">여행계획</a><br>        
         <a href="/member/accommodation">숙박</a><br>
-        <a href="/member/location">길찾기</a><br>
+        <a href="/index.html">길찾기</a><br>
         <a href="/place/traverserStory">Traverser's Story</a>
 
 			</span>
