--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>회원가입 페이지</title>
-
+<link rel="stylesheet" href="/css/mainStyle.css">
 <link href="/css/signUpStyle.css" rel="stylesheet">
 </head>
 
@@ -32,19 +32,54 @@
 				</label>
 			</div>
 
-			<label> <input name="userpw" required placeholder=""
-				type="password" class="input"> <span>비밀번호</span>
-			</label>
+
+<div class="flex">
+    <label class="input-label" style="position: relative; display: block;">
+        <input id="password" name="password" required placeholder="" type="password" class="input" style="padding-right: 30px;">
+        <span>비밀번호</span>
+        <button type="button" id="togglePassword" onclick="togglePasswordVisibility('password', 'togglePassword')" style="background: none; border: none; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); padding: 0; margin: 0;">
+            <img src="/image/eye_closed_icon.png" alt="Toggle visibility" style="width: 20px; height: 20px;">
+        </button>
+    </label>
+</div>
+
+<div class="flex">
+    <label class="input-label" style="position: relative; display: block;">
+        <input id="confirmPassword" name="confirmPassword" required placeholder="" type="password" class="input" style="padding-right: 30px;">
+        <span>비밀번호 확인</span>
+        <button type="button" id="toggleConfirmPassword" onclick="togglePasswordVisibility('confirmPassword', 'toggleConfirmPassword')" style="background: none; border: none; position: absolute; right: 10px; top: 50%; transform: translateY(-50%); padding: 0; margin: 0;">
+            <img src="/image/eye_closed_icon.png" alt="Toggle visibility" style="width: 20px; height: 20px;">
+        </button>
+    </label>
+</div>
+
+
+
+			<div id="error-message" style="color: red; display: none;">비밀번호가
+				일치하지 않습니다.</div>
+
+			<button type="submit" onclick="validatePasswords()">제출</button>
+
 
 			<div class="flex">
 				<label class="input-label"> <input id="phone" name="phone"
 					required placeholder="" type="text" class="input"
+					oninput="formatPhoneNumber(this)" maxlength="13"
 					onblur="checkUserPhone()"> <span>전화번호</span>
 				</label>
 			</div>
-			<label> <input name="birth" required placeholder=""
-				type="date" class="input"> <span>생년월일</span>
-			</label> <label> <input name="email" required placeholder=""
+
+
+
+			<div class="flex">
+				<label class="input-label"> <input id="birth" name="birth"
+					required placeholder="" type="text" class="input"
+					oninput="validateAndFormatBirth()" maxlength="8"> <span>생년월일
+						8자리</span>
+				</label>
+			</div>
+
+			<label> <input name="email" required placeholder=""
 				type="email" class="input"> <span>E-mail</span>
 			</label>
 
@@ -52,8 +87,7 @@
 		</form>
 
 		<script>//서버 통신 코드
-		
-	 
+
 			function checkUserid() {
 				let alertUseridShown = false; //아이디 알림창 떴는지 추적변수
 			  //'#userid'라는 HTML 입력 요소를 찾아서 그 값을 userid에 저장
@@ -83,9 +117,7 @@
  			      })
 			  }
 	   }
-			
-		  
-	   
+
 			function checkUserNick(){
 				let alertNickShown = false;
 				let userNick = document.querySelector("#nick").value.trim();
@@ -102,10 +134,6 @@
 				  })
 	     } 
 		}
-			
-			
-			
-			
 			
 			 function checkUserPhone(){
 				let alertPhoneShown = false; 
@@ -124,6 +152,62 @@
           })
 			}  
 	}
+			 
+			 function validateAndFormatBirth() {
+			    var input = document.getElementById("birth");
+			    var value = input.value.replace(/[^0-9]/g, ''); // 숫자만 입력 가능
+
+			    // 길이가 8자리일 때 자동으로 형식 변경
+			    if (value.length === 8) {
+			        var year = value.substring(0, 4);
+			        var month = value.substring(4, 6);
+			        var day = value.substring(6, 8);
+			        input.value = year + '.' + month + '.' + day;
+			    } else {
+			        input.value = value; // 8자리 이하일 때는 그냥 숫자만 유지
+			    }
+			}
+
+			 function formatPhoneNumber(input) {
+			    // 숫자만 남기고 모든 비숫자 문자는 제거
+			    var value = input.value.replace(/[^0-9]/g, '');
+
+			    if (value.length > 3 && value.length <= 7) {
+			        // 3자리 이후 4자리 형식
+			        input.value = value.substring(0, 3) + '-' + value.substring(3);
+			    } else if (value.length > 7) {
+			        // 3자리-4자리-4자리 형식
+			        input.value = value.substring(0, 3) + '-' + value.substring(3, 7) + '-' + value.substring(7, 11);
+			    } else {
+			        input.value = value;
+			    }
+			}
+
+			 function togglePasswordVisibility(passwordFieldId, toggleButtonId) {
+			    var passwordField = document.getElementById(passwordFieldId);
+			    var toggleButton = document.getElementById(toggleButtonId);
+			    
+			    if (passwordField.type === "password") {
+			        passwordField.type = "text";
+			        toggleButton.children[0].src = "/image/eye_open_icon.png";
+			    } else {
+			        passwordField.type = "password";
+			        toggleButton.children[0].src = "/image/eye_closed_icon.png";
+			    }
+			}
+			 function validatePasswords() {
+			    var password = document.getElementById('password').value;
+			    var confirmPassword = document.getElementById('confirmPassword').value;
+			    var errorMessage = document.getElementById('error-message');
+
+			    if (password !== confirmPassword) {
+			        errorMessage.style.display = 'block';
+			        return false; // 폼 제출을 막음
+			    } else {
+			        errorMessage.style.display = 'none';
+			        return true; // 폼 제출을 허용함
+			    }
+			} 
 		</script>
 
 	</div>
