--- a/www/src/main/resources/templates/member/csView.html
+++ b/www/src/main/resources/templates/member/csView.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title th:text="${row.title}">Q&A 게시글</title>
 <link rel="stylesheet" href="/css/viewStyle.css">
+<link rel="stylesheet" href="/css/mainStyle.css">
 <!-- 스타일을 위한 CSS 파일 경로 -->
 </head>
 <body>
