--- a/www/src/main/resources/templates/member/cswrite.html
+++ b/www/src/main/resources/templates/member/cswrite.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <link rel="stylesheet" href="/css/csboardStyle.css">
+<link rel="stylesheet" href="/css/mainStyle.css">
     <meta charset="UTF-8">
     <title>글쓰기</title>
 </head>
