--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>고객지원</title>
 <link rel="stylesheet" href="/css/Customerstyle.css">
+<link rel="stylesheet" href="/css/mainStyle.css">
 </head>
 <body>
 	<header>
