--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -5,157 +5,160 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>고객지원</title>
 <link rel="stylesheet" href="/css/Customerstyle.css">
+<link rel="stylesheet" href="/css/mainStyle.css">
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
+	<div id="customer">
 	<header>
-		<nav>
-			<ul>
-				<li><a href="#company-intro"
-					onclick="showSection('company-intro')">기업소개</a></li>
-				<li><a href="#notice" onclick="showSection('notice')">공지사항</a></li>
-				<li><a href="#faq" onclick="showSection('faq')">FAQ</a></li>
-				<li><a href="#qna" onclick="showSection('qna')">Q&A</a></li>
+    <nav>
+      <ul>
+        <li><a href="#company-intro"
+          onclick="showSection('company-intro')">기업소개</a></li>
+        <li><a href="#notice" onclick="showSection('notice')">공지사항</a></li>
+        <li><a href="#faq" onclick="showSection('faq')">FAQ</a></li>
+        <li><a href="#qna" onclick="showSection('qna')">Q&A</a></li>
 
-			</ul>
-		</nav>
-	</header>
+      </ul>
+    </nav>
+  </header>
 
-	<section id="company-intro" class="section">
-		<div class="intro-container">
-			<div class="intro-logo">
-				<img src="/image/traverse.png">
-			</div>
-			<div class="intro-text">
-				<h2>기업소개</h2>
-				<p>여기는 기업 소개 섹션입니다. 기업의 역사, 가치, 미션 등을 소개합니다.</p>
-			</div>
-		</div>
-	</section>
+  <section id="company-intro" class="section">
+    <div class="intro-container">
+      <div class="intro-logo">
+        <img src="/image/traverse.png">
+      </div>
+      <div class="intro-text">
+        <h2>기업소개</h2>
+        <p>여기는 기업 소개 섹션입니다. 기업의 역사, 가치, 미션 등을 소개합니다.</p>
+      </div>
+    </div>
+  </section>
 
-	<section id="notice" class="section" style="display: none;">
-		<h2>공지사항</h2>
-		<p>여기는 공지사항 섹션입니다. 중요한 공지 및 업데이트 정보를 제공합니다.</p>
-		<table class="rwd-table">
-			<tbody>
-				<tr>
-					<th>No</th>
-					<th>제목</th>
-					<th>닉네임</th>
-					<th>작성일</th>
-					<th>조회수</th>
-				</tr>
-				<tr th:each="row : ${announce}">
-					<td th:text="${row.announcement_idx}"></td>
-					<td><a
-						th:href="@{/member/view/{announcement_idx}(announcement_idx=${row.announcement_idx})}"
-						th:text="${row.title}"></a></td>
-					<td th:text="${row.nick}"></td>
-					<td th:text="${row.w_date}"></td>
-					<td th:text="${row.v_count}"></td>
-				</tr>
-			</tbody>
-		</table>
-		<br>
+  <section id="notice" class="section" style="display: none;">
+    <h2>공지사항</h2>
+    <p>여기는 공지사항 섹션입니다. 중요한 공지 및 업데이트 정보를 제공합니다.</p>
+    <table class="rwd-table">
+      <tbody>
+        <tr>
+          <th>No</th>
+          <th>제목</th>
+          <th>닉네임</th>
+          <th>작성일</th>
+          <th>조회수</th>
+        </tr>
+        <tr th:each="row : ${announce}">
+          <td th:text="${row.announcement_idx}"></td>
+          <td><a
+            th:href="@{/member/view/{announcement_idx}(announcement_idx=${row.announcement_idx})}"
+            th:text="${row.title}"></a></td>
+          <td th:text="${row.nick}"></td>
+          <td th:text="${row.w_date}"></td>
+          <td th:text="${row.v_count}"></td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
 
-		<ul class="pagemenu">
+    <ul class="pagemenu">
 
-			<li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}"><a
-				th:href="@{customer(idx=${i})} + '#notice'"> <span
-					th:text="${i}"></span>
-			</a></li>
+      <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}"><a
+        th:href="@{customer(idx=${i})} + '#notice'"> <span
+          th:text="${i}"></span>
+      </a></li>
 
-		</ul>
-		<!-- 관리자가 아니면 글쓰기 활성화 안됨 -->
-		<div th:if="${session.user != null and session.user.nick == '관리자'}">
-			<button>
-				<span class="span-mother"> <span>글</span> <span>쓰</span> <span>기</span>
-				</span> <span class="span-mother2"> <span>글</span> <span>쓰</span> <span>기</span>
-				</span>
-			</button>
-		</div>
-	</section>
+    </ul>
+    <!-- 관리자가 아니면 글쓰기 활성화 안됨 -->
+    <div th:if="${session.user != null and session.user.nick == '관리자'}">
+      <button>
+        <span class="span-mother"> <span>글</span> <span>쓰</span> <span>기</span>
+        </span> <span class="span-mother2"> <span>글</span> <span>쓰</span> <span>기</span>
+        </span>
+      </button>
+    </div>
+  </section>
 
-	<section id="faq" class="section" style="display: none;">
-		<h2>FAQ</h2>
-		<div class="faq-item">
-			<h3>Q: 자주 묻는 질문 1</h3>
-			<p>A: 자주 묻는 질문 1에 대한 답변입니다.</p>
-		</div>
-		<div class="faq-item">
-			<h3>Q: 자주 묻는 질문 2</h3>
-			<p>A: 자주 묻는 질문 2에 대한 답변입니다.</p>
-		</div>
-	</section>
+  <section id="faq" class="section" style="display: none;">
+    <h2>FAQ</h2>
+    <div class="faq-item">
+      <h3>Q: 자주 묻는 질문 1</h3>
+      <p>A: 자주 묻는 질문 1에 대한 답변입니다.</p>
+    </div>
+    <div class="faq-item">
+      <h3>Q: 자주 묻는 질문 2</h3>
+      <p>A: 자주 묻는 질문 2에 대한 답변입니다.</p>
+    </div>
+  </section>
 
-	<section id="qna" class="section" style="display: none;">
-		<h2>Q&A</h2>
-		<div class="qna-item">
-			<h3>qna 게시판</h3>
+  <section id="qna" class="section" style="display: none;">
+    <h2>Q&A</h2>
+    <div class="qna-item">
+      <h3>qna 게시판</h3>
 
-			<table>
-				<tbody>
-					<tr>
-						<th>No</th>
-						<th>제목</th>
-						<th>닉네임</th>
-						<th>내용</th>
-						<th>작성시간</th>
-					</tr>
-					<tr th:each="row : ${qna}">
-						<td th:text="${row.board_idx}"></td>
-						<td><a
-							th:href="@{/member/csView/{board_idx}(board_idx=${row.board_idx})}"
-							th:text="${row.title}"></a></td>
-						<td th:text="${row.nick}"></td>
-						<td th:text="${row.title}"></td>
-						<td th:text="${row.content}"></td>
-						<td th:text="${row.create_at}"></td>
-					</tr>
-				</tbody>
-			</table>
-			<br>
-			<ul class="pagemenu"><!-- 페이지네이션 메뉴의 컨테이너 역할 -->
+      <table>
+        <tbody>
+          <tr>
+            <th>No</th>
+            <th>제목</th>
+            <th>닉네임</th>
+            <th>내용</th>
+            <th>작성시간</th>
+          </tr>
+          <tr th:each="row : ${qna}">
+            <td th:text="${row.board_idx}"></td>
+            <td><a
+              th:href="@{/member/csView/{board_idx}(board_idx=${row.board_idx})}"
+              th:text="${row.title}"></a></td>
+            <td th:text="${row.nick}"></td>
+            <td th:text="${row.title}"></td>
+            <td th:text="${row.content}"></td>
+            <td th:text="${row.create_at}"></td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <ul class="pagemenu"><!-- 페이지네이션 메뉴의 컨테이너 역할 -->
         <!-- 타임리프의 반복문을 위한 속성으로 html코드 동적으로 생성 i는 반복분에서 인텍스를 나타내고 pg.begin에서 pg.end까지 
         숫자 시퀀스를 생성 예를 들어, 1,10이면 pg.begin에서 pg.end까지 숫자에 대해 li태그를 생성 -->
-				<li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}"><a
-					th:href="@{customer(idx=${i})} + '#qna'"><!-- 동적 링크 생성 --> <span
-						th:text="${i}"></span>
-				</a></li>
-			</ul>
-			<!-- pg.begin에서 pg.end까지 숫자에 해당하는 페이지 번호를 순서대로 li와 a태그로 감싸서 페이지네이션 링크를 만든다.
-			이 링크는 사용자가 각 페이지 번호를 클릭할 수 있도록 하며 클릭 시 특정 페이지로 이동한다. a태그에 #qna가 붙어있으므로
-			페이지 이동 후에도 페이지의 특정 위치로 스크롤된다. -->			
-		</div>
+        <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}"><a
+          th:href="@{customer(idx=${i})} + '#qna'"><!-- 동적 링크 생성 --> <span
+            th:text="${i}"></span>
+        </a></li>
+      </ul>
+      <!-- pg.begin에서 pg.end까지 숫자에 해당하는 페이지 번호를 순서대로 li와 a태그로 감싸서 페이지네이션 링크를 만든다.
+      이 링크는 사용자가 각 페이지 번호를 클릭할 수 있도록 하며 클릭 시 특정 페이지로 이동한다. a태그에 #qna가 붙어있으므로
+      페이지 이동 후에도 페이지의 특정 위치로 스크롤된다. -->     
+    </div>
 
-		<a href="/member/cswrite"><button>글쓰기</button></a>
-	</section>
+    <a href="/member/cswrite"><button>글쓰기</button></a>
+  </section>
 
-	<script>
-	//세션에서 로그인 상태 가져옴
-	let userlogin = sessionStorage.getItem('userlogin') === 'true';
-	
+  <script>
+  //세션에서 로그인 상태 가져옴
+  let userlogin = sessionStorage.getItem('userlogin') === 'true';
+  
   function showSection(sectionId) {
-  	//섹션 클래스를 가진 요소중 특정 섹션만 보여줌
+    //섹션 클래스를 가진 요소중 특정 섹션만 보여줌
     const sections = document.querySelectorAll('.section');
     sections.forEach(section => {
-    	if (section.id === sectionId) {
-      	section.style.display = 'block';
+      if (section.id === sectionId) {
+        section.style.display = 'block';
       } else {
           section.style.display = 'none';
       }
-		});
-	}
+    });
+  }
 
- 	let button = document.querySelectorAll('button');
+  let button = document.querySelectorAll('button');
     
 
   function loginSuccess() {
-	  userlogin = true;
-	  sessionStorage.setItem('userlogin', true);
-	  //세션 스토리지에 로그인 상태 저장
-	}
+    userlogin = true;
+    sessionStorage.setItem('userlogin', true);
+    //세션 스토리지에 로그인 상태 저장
+  }
 
-		    document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function() {
         if (window.location.hash === '#notice') {
             showSection('notice');
             document.getElementById('notice').scrollIntoView();
@@ -164,6 +167,8 @@
 
     
     </script>
-
+	
+	</div>
+<th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
