--- a/www/src/main/resources/templates/member/csUpdate.html
+++ b/www/src/main/resources/templates/member/csUpdate.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="/css/mainStyle.css">
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
   <form method="POST">
     <table>
        <tr>
@@ -20,5 +22,6 @@
     <input name="a_idx" type="hidden" th:value="${session.user.accounts_idx}">
     <button>수정</button>
   </form>
+  <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
