--- a/www/src/main/resources/templates/member/cswrite.html
+++ b/www/src/main/resources/templates/member/cswrite.html
@@ -2,10 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <link rel="stylesheet" href="/css/csboardStyle.css">
+<link rel="stylesheet" href="/css/mainStyle.css">
     <meta charset="UTF-8">
     <title>글쓰기</title>
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
+   <div id="csboard">
     <h1>QnA</h1>
     <form method="post">
         <div>
@@ -21,5 +24,7 @@
             <button type="submit">저장</button>
         </div>
     </form>
+   </div>
+    <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
