--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -9,125 +9,130 @@
 </head>
 
 <body>
+<th:block th:replace="/fragment::header"></th:block>
+	<div id="signup">
+	
 	<div class="mid">
-		<form class="form" method="post">
-			<p class="title">Membership Register</p>
+    <form class="form" method="post">
+      <p class="title">Membership Register</p>
 
-			<div class="flex">
-				<label> <input name="name" required placeholder=""
-					type="text" class="input"> <span>이름</span>
-				</label>
-			</div>
+      <div class="flex">
+        <label> <input name="name" required placeholder=""
+          type="text" class="input"> <span>이름</span>
+        </label>
+      </div>
 
-			<div class="flex">
-				<label class="input-label"> <input id="userid" name="userid"
-					required placeholder="" type="text" class="input"
-					onblur="checkUserid()"> <span>아이디</span>
-				</label>
-			</div>
+      <div class="flex">
+        <label class="input-label"> <input id="userid" name="userid"
+          required placeholder="" type="text" class="input"
+          onblur="checkUserid()"> <span>아이디</span>
+        </label>
+      </div>
 
-			<div class="flex">
-				<label class="input-label"> <input id="nick" name="nick"
-					required placeholder="" type="text" class="input"
-					onblur="checkUserNick()"> <span>닉네임</span>
-				</label>
-			</div>
+      <div class="flex">
+        <label class="input-label"> <input id="nick" name="nick"
+          required placeholder="" type="text" class="input"
+          onblur="checkUserNick()"> <span>닉네임</span>
+        </label>
+      </div>
 
-			<label> <input name="userpw" required placeholder=""
-				type="password" class="input"> <span>비밀번호</span>
-			</label>
+      <label> <input name="userpw" required placeholder=""
+        type="password" class="input"> <span>비밀번호</span>
+      </label>
 
-			<div class="flex">
-				<label class="input-label"> <input id="phone" name="phone"
-					required placeholder="" type="text" class="input"
-					onblur="checkUserPhone()"> <span>전화번호</span>
-				</label>
-			</div>
-			<label> <input name="birth" required placeholder=""
-				type="date" class="input"> <span>생년월일</span>
-			</label> <label> <input name="email" required placeholder=""
-				type="email" class="input"> <span>E-mail</span>
-			</label>
+      <div class="flex">
+        <label class="input-label"> <input id="phone" name="phone"
+          required placeholder="" type="text" class="input"
+          onblur="checkUserPhone()"> <span>전화번호</span>
+        </label>
+      </div>
+      <label> <input name="birth" required placeholder=""
+        type="date" class="input"> <span>생년월일</span>
+      </label> <label> <input name="email" required placeholder=""
+        type="email" class="input"> <span>E-mail</span>
+      </label>
 
-			<button class="submit">회원가입</button>
-		</form>
+      <button class="submit">회원가입</button>
+    </form>
 
-		<script>//서버 통신 코드
-		
-	 
-			function checkUserid() {
-				let alertUseridShown = false; //아이디 알림창 떴는지 추적변수
-			  //'#userid'라는 HTML 입력 요소를 찾아서 그 값을 userid에 저장
-			  //사용자가 입력한 아이디를 가져옴
-				let userid = document.querySelector("#userid").value.trim();
-				
-			  /*fetch API를 사용하여 아래 서버에 GET요청을 보낸다.(요청을 보낼 URL)
-			  여기서 userid는 사용자가 입력한 값이 추가된 쿼리 파라미터로, 서버에 전달
-			  '{method:"get"}은 get요청을 사용한다는 것을 지정한다'
-			  즉, 서버의 '/member/checkUserid'경로로 'userid'값을 쿼리로 전달하여
-			  사용자가 입력한 아이디가 데이터베이스에 존재하는지 확인하도록 한다.*/
-			  if(userid !== ""){
-			  fetch("http://localhost:8080/member/checkUserid?userid=" + userid, {method:"get"})
-			  /*페치가 서버로부터 응답을 받으면 이 응답은 첫 번째 'then'에서 처리
-			  response는 서버의 응답 객체를 의미
-			  'reponse.json()은 응답 본문을 json형식으로 변환, 서버가 json형식으로데이터를 반환할 때 사용*/
-			  .then(response => response.json())
-			  /*두 번째 'then'은 json으로 변환된 데이터를 받아서 처리
-			  data는 서버에서 반환한 json객체를 나타냄
-			  alert(data.name)은 서버에서 받은 data객체의 name속성을 알림창으로 표시한다.
-			  */
- 			  .then(data => {
- 			  	//알림창이 뜬 적 없고, 서버에서 받은 데이터에 name이 있으면,
- 			     if(!alertUseridShown && typeof data.name ==='string' && data.name.length > 0)
- 			    	  alert(data.name);
- 			    	 alertUseridShown = true; //알림창이 떴다고 상태 바꿔줌
- 			      })
-			  }
-	   }
-			
-		  
-	   
-			function checkUserNick(){
-				let alertNickShown = false;
-				let userNick = document.querySelector("#nick").value.trim();
-				
-				//닉네임을 입력하지 않았다면 fetch 요청을 보냄
-				if(userNick !== ""){
-				fetch("http://localhost:8080/member/checkUserNick?userNick=" + userNick, {method:"get"})
-				.then(response => response.json())
-				.then(data => {
+    <script>//서버 통신 코드
+    
+   
+      function checkUserid() {
+        let alertUseridShown = false; //아이디 알림창 떴는지 추적변수
+        //'#userid'라는 HTML 입력 요소를 찾아서 그 값을 userid에 저장
+        //사용자가 입력한 아이디를 가져옴
+        let userid = document.querySelector("#userid").value.trim();
+        
+        /*fetch API를 사용하여 아래 서버에 GET요청을 보낸다.(요청을 보낼 URL)
+        여기서 userid는 사용자가 입력한 값이 추가된 쿼리 파라미터로, 서버에 전달
+        '{method:"get"}은 get요청을 사용한다는 것을 지정한다'
+        즉, 서버의 '/member/checkUserid'경로로 'userid'값을 쿼리로 전달하여
+        사용자가 입력한 아이디가 데이터베이스에 존재하는지 확인하도록 한다.*/
+        if(userid !== ""){
+        fetch("http://localhost:8080/member/checkUserid?userid=" + userid, {method:"get"})
+        /*페치가 서버로부터 응답을 받으면 이 응답은 첫 번째 'then'에서 처리
+        response는 서버의 응답 객체를 의미
+        'reponse.json()은 응답 본문을 json형식으로 변환, 서버가 json형식으로데이터를 반환할 때 사용*/
+        .then(response => response.json())
+        /*두 번째 'then'은 json으로 변환된 데이터를 받아서 처리
+        data는 서버에서 반환한 json객체를 나타냄
+        alert(data.name)은 서버에서 받은 data객체의 name속성을 알림창으로 표시한다.
+        */
+        .then(data => {
+          //알림창이 뜬 적 없고, 서버에서 받은 데이터에 name이 있으면,
+           if(!alertUseridShown && typeof data.name ==='string' && data.name.length > 0)
+              alert(data.name);
+             alertUseridShown = true; //알림창이 떴다고 상태 바꿔줌
+            })
+        }
+     }
+      
+      
+     
+      function checkUserNick(){
+        let alertNickShown = false;
+        let userNick = document.querySelector("#nick").value.trim();
+        
+        //닉네임을 입력하지 않았다면 fetch 요청을 보냄
+        if(userNick !== ""){
+        fetch("http://localhost:8080/member/checkUserNick?userNick=" + userNick, {method:"get"})
+        .then(response => response.json())
+        .then(data => {
 
-				  if(!alertNickShown && typeof data.nick === 'string' && data.nick.length > 0)
-				  	alert(data.nick);
-				  	alertNickShown = true;
-				  })
-	     } 
-		}
-			
-			
-			
-			
-			
-			 function checkUserPhone(){
-				let alertPhoneShown = false; 
-			  let phone = document.querySelector('#phone').value.trim();//공백을 제거한 전화번호 값
-			  
-			  //전화번호가 비어있지 않으면 fetch 요청
-			  if(phone !== ""){
-			  fetch("http://localhost:8080/member/checkUserPhone?phone=" + phone, {method:"get"})
-			  .then(response => response.json())
+          if(!alertNickShown && typeof data.nick === 'string' && data.nick.length > 0)
+            alert(data.nick);
+            alertNickShown = true;
+          })
+       } 
+    }
+      
+      
+      
+      
+      
+       function checkUserPhone(){
+        let alertPhoneShown = false; 
+        let phone = document.querySelector('#phone').value.trim();//공백을 제거한 전화번호 값
+        
+        //전화번호가 비어있지 않으면 fetch 요청
+        if(phone !== ""){
+        fetch("http://localhost:8080/member/checkUserPhone?phone=" + phone, {method:"get"})
+        .then(response => response.json())
           .then(data => {
             
-            	if(!alertPhoneShown && typeof data.phone === 'string' && data.phone.length > 0){
+              if(!alertPhoneShown && typeof data.phone === 'string' && data.phone.length > 0){
                 alert(data.phone);
                 alertPhoneShown = true;
               }   
           })
-			}  
-	}
-		</script>
+      }  
+  }
+    </script>
 
+  </div>
 	</div>
+	<th:block th:replace="/fragment::footer"></th:block>
 </body>
 
 </html>
