--- a/www/src/main/resources/static/css/homeStyle.css
+++ b/www/src/main/resources/static/css/homeStyle.css
@@ -41,7 +41,7 @@
 
 .sidebar-left {
     width: 12%;
-    height: auto; /* 사이드바 높이를 콘텐츠에 맞게 조정 */
+    height: 400px; /* 사이드바 높이를 콘텐츠에 맞게 조정 */
     position: absolute;
     top: 40%;
     left: 25px;
