--- a/www/src/main/resources/templates/member/detail.html
+++ b/www/src/main/resources/templates/member/detail.html
@@ -4,20 +4,37 @@
 <meta charset="UTF-8">
 <title>상세 정보</title>
 <link rel="stylesheet" href="/css/detailStyle.css">
+<link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 <body>
+  <th:block th:replace="/fragment::header"></th:block>
 	<header>
 		<div class="navbar">
 			<div class="navbar-left">
 				<h1 th:text="${detail.title}">이름</h1>
 			</div>
 			<div class="navbar-right">
-				<div class="heart-container" title="Like">
-					<input type="checkbox" class="checkbox" id="Give-It-An-Id">
-					<div class="svg-container">
-						<!-- SVG content omitted for brevity -->
-					</div>
-				</div>
+        <div class="heart-container" title="Like">
+            <input type="checkbox" class="checkbox" id="Give-It-An-Id" th:onclick="handleLike()">
+            <div class="svg-container">
+                <svg viewBox="0 0 24 24" class="svg-outline" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z">
+                    </path>
+                </svg>
+                <svg viewBox="0 0 24 24" class="svg-filled" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z">
+                    </path>
+                </svg>
+                <svg class="svg-celebrate" width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+                    <polygon points="10,10 20,20"></polygon>
+                    <polygon points="10,50 20,50"></polygon>
+                    <polygon points="20,80 30,70"></polygon>
+                    <polygon points="90,10 80,20"></polygon>
+                    <polygon points="90,50 80,50"></polygon>
+                    <polygon points="80,80 70,70"></polygon>
+                </svg>
+            </div>
+        </div>
 			</div>
 		</div>
 	</header>
@@ -168,7 +185,43 @@ document.addEventListener("DOMContentLoaded", function() {
         const formId = 'editForm_' + idx;
         document.querySelector('#' + formId).style.display = "block";
     }
+
+    function handleLike() {
+    const checkbox = document.getElementById('Give-It-An-Id');
+    if (checkbox.checked) {
+        // 데이터를 서버로 전송
+        const data = {
+    a_idx: [[${session.user.accounts_idx}]],  // JavaScript에서 사용할 수 있도록 직접 삽입
+    title: "[[${detail.title}]]",
+    addr1: "[[${detail.addr1}]]",
+    firstimage: "[[${detail.firstimage}]]",
+    mapx: [[${detail.mapx}]],
+    mapy: [[${detail.mapy}]]
+};
+
+        fetch('/member/like', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        })
+        .then(response => {
+            if (response.ok) {
+                alert('Liked!');
+            } else {
+                alert('Failed to like this place.');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('An error occurred. Please try again.');
+        });
+    }
+}
   </script>
+
+    <th:block th:replace="/fragment::footer"></th:block>
 
 </body>
 </html>
