--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -4,63 +4,44 @@
 <meta charset="UTF-8">
 <title>마이페이지</title>
 <link href="/css/myPageStyle.css" rel="stylesheet">
+  <link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 <body>
-  <input type="checkbox" id="menuicon">
-  <header>
-  <div>
-	<label for="menuicon" class="menubtn"> <span></span> <span></span>
-		<span></span>
-	</label>
-	</div>
-	</header>
-	<div class="mypage">
-		<a href="/"><img class="logo" th:src="@{/image/logo_w.png}"></a>
-		<table>
-			<tr>
-				<th>회원번호</th>
-				<td th:text="${session.user.accounts_idx}"></td>
-			</tr>
-			<tr>
-				<th>아이디</th>
-				<td th:text="${session.user.userid}"></td>
-			</tr>
-			<tr>
-				<th>닉네임</th>
-				<td th:text="${session.user.nick}"></td>
-			</tr>
-			<tr>
-				<th>이메일</th>
-				<td th:text="${session.user.email}"></td>
-			</tr>
-			<tr>
-				<th>생년월일</th>
-				<td th:text="${session.user.birth}"></td>
-			</tr>
-		</table>
 
-		<button>수정</button>
-		<button>탈퇴</button>
-	</div>
+  <th:block th:replace="/fragment::header"></th:block>
+    <div id="mypage">
+    
 
-  <div class="container">
-	<div class="sidebar">
-		<span class="area_desc"> <a href="/member/signUp">signUp</a><br>
-			<th:block th:if="${session.user == null}">
-				<a href="/member/login">login</a>
-				<br>
-			</th:block> <th:block th:if="${session.user != null}">
-				<a href="/member/logout">logout</a>
-				<br>
-				<a href="/member/myPage">myPage</a>
-				<br>
-			</th:block> <a href="/member/like">like</a><br> <a href="/place/mapAPI">mapAPI</a><br>
-			<a href="/member/customer">customer</a>
-		</span>
-	</div>
-	</div>
+  <div class="mypage">
+    <table>
+      <tr>
+        <th>회원번호</th>
+        <td th:text="${session.user.accounts_idx}"></td>
+      </tr>
+      <tr>
+        <th>아이디</th>
+        <td th:text="${session.user.userid}"></td>
+      </tr>
+      <tr>
+        <th>닉네임</th>
+        <td th:text="${session.user.nick}"></td>
+      </tr>
+      <tr>
+        <th>이메일</th>
+        <td th:text="${session.user.email}"></td>
+      </tr>
+      <tr>
+        <th>생년월일</th>
+        <td th:text="${session.user.birth}"></td>
+      </tr>
+    </table>
 
-	<script th:inline="javascript">
+    <button>수정</button>
+    <button>탈퇴</button>
+  </div>
+
+
+  <script th:inline="javascript">
     let btns = document.querySelectorAll('button');
     
     // 수정 버튼
@@ -74,5 +55,10 @@
       location.href = '/member/delete/[[${session.user.accounts_idx}]]';
     };
   </script>
+  
+    </div>
+
+
+  <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
