--- a/www/src/main/resources/templates/member/update.html
+++ b/www/src/main/resources/templates/member/update.html
@@ -3,74 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<style>
-body {
-	font-family: 'Arial', sans-serif;
-	background-color: #e9f5e9;
-	color: #333;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-}
-
-form {
-	background-color: #fff;
-	padding: 20px;
-	border-radius: 10px;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-table {
-	width: 100%;
-	border-collapse: collapse;
-	margin-bottom: 15px;
-}
-
-th, td {
-	padding: 10px;
-	text-align: left;
-	font-size: 16px;
-}
-
-th {
-	background-color: #4CAF50;
-	color: white;
-	width: 30%;
-}
-
-td {
-	width: 70%;
-}
-
-input[type="text"], input[type="password"], input[type="email"] {
-	width: 100%;
-	padding: 8px;
-	margin: 5px 0;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-}
-
-button {
-	width: 100%;
-	padding: 10px;
-	font-size: 18px;
-	color: white;
-	background-color: #4CAF50;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	transition: background-color 0.3s;
-}
-
-button:hover {
-	background-color: #45a049;
-}
-</style>
+<link href="/css/mainStyle.css" rel="stylesheet">
+<link href="/css/ann_update.css" rel="stylesheet">
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
    <form method="POST">
       <table>
          <tr>
@@ -94,5 +31,6 @@ button:hover {
       
       <button>modify</button>
    </form>
+   <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
